--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         .button { margin: 5px; padding: 10px; cursor: pointer; background: #6200ea; color: white; border: none; border-radius: 4px; }
         .entry { display: flex; align-items: center; justify-content: space-between; margin-bottom: 10px; padding: 10px; border: 1px solid #ddd; border-radius: 4px; background: #fff; }
         .delete-btn { background: none; border: none; cursor: pointer; color: red; }
+        #result { text-align:left }
         .material-icons { vertical-align: middle; }
     </style>
 </head>
@@ -26,7 +27,7 @@
             </div>
         </div>
         <button class="button" onclick="addEntry()">Add Entry</button>
-        <h3 id="result">Average Entry: </h3>
+        <h4 id="result">Average Entry (with 0.1% fee): </h4>
     </div>
 
     <script>
@@ -50,12 +51,13 @@
             for (let i = 0; i < prices.length; i++) {
                 let price = parseFloat(prices[i].value) || 0;
                 let amount = parseFloat(amounts[i].value) || 0;
-                totalCost += price * amount;
+                let costWithFee = price * 1.001; // Adding 0.1% fee
+                totalCost += costWithFee * amount;
                 totalAmount += amount;
             }
             
-            let averageEntry = totalAmount ? (totalCost / totalAmount).toFixed(2) : 0;
-            document.getElementById("result").innerText = "Average Entry: " + averageEntry;
+            let averageEntry = totalAmount ? (totalCost / totalAmount).toFixed(6) : 0;
+            document.getElementById("result").innerText = "Average Entry (with 0.1% fee): " + averageEntry;
         }
     </script>
 </body>
